--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ meta_description: 'Jekyll template, minimal style, perfect for bloggers.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: 
-production_url: https://horace.netlify.com/
+production_url: https://edmar.github.com/
 disqus: 'justgoodthemes'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 cover_image: bc_1.jpg
@@ -15,8 +15,8 @@ ga_analytics:
 
 # Author
 author:
-  name: 'Daniel Bennett'
-  image: 'authorimage.jpg'
+  name: 'Edmar'
+  image: 'profile.jpg'
   greetings: 'Hi there!'
   description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
   bio: 'Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.'
