--- a/_config.yml
+++ b/_config.yml
@@ -28,15 +28,10 @@ thankyou_page_description: "Your message has been successfully sent. We will con
 
 # Social links
 twitter: 'edmar'
-facebook: 'username'
 github: 'edmar'
-codepen: 'username'
-dribbble: 'username'
-medium: '@username'
-instagram: 'username'
-pinterest: 'username'
-linkedin: 'username'
-producthunt: '@username'
+medium: '@edmarferreira'
+instagram: 'edmarferreira'
+producthunt: '@edmar'
 
 # Navigation
 navigation:
