--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: 'Edmar'
 description: 'Horace is a simple Jekyll theme for writers and bloggers. Explore it yourself.'
 meta_description: 'Jekyll template, minimal style, perfect for bloggers.'
-logo: 'assets/images/logo.png'
+logo: 'assets/images/logo2.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: 
 production_url: https://edmar.github.com/
@@ -16,7 +16,7 @@ ga_analytics:
 # Author
 author:
   name: 'Edmar'
-  image: 'profile.jpg'
+  image: 'profile2.jpg'
   greetings: 'Hi there!'
   description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
   bio: 'Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.'
