--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ ga_analytics:
 # Author
 author:
   name: 'Edmar'
-  image: 'profile4.jpeg'
+  image: 'profile5.jpg'
   greetings: 'Hi there!'
   description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
   bio: 'Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.'
