--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site setings
-name: 'edmar.ai'
+name: 'edmarw'
 description: 'Horace is a simple Jekyll theme for writers and bloggers. Explore it yourself.'
 meta_description: 'Jekyll template, minimal style, perfect for bloggers.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: 
-production_url: https://edmar.github.com/
+production_url: https://edmar.org/
 disqus: 'justgoodthemes'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 cover_image: bc_1.jpg
@@ -16,7 +16,7 @@ ga_analytics:
 # Author
 author:
   name: 'Edmar'
-  image: 'profile5.jpg'
+  image: 'edmar.png'
   greetings: 'Hi there!'
   description: "My name is Daniel Bennett. I'm a freelance front-end developer, author and speaker based in Austin, TX. It’s nice to meet you."
   bio: 'Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.'
