--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus: 'edmar'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 cover_image: bc_1.jpg
 # Add your GA Tracking Id
-ga_analytics: 
+ga_analytics: UA-74235610-4 
 
 
 # Author
