change author image

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ ga_analytics: UA-74235610-4
 # Author
 author:
   name: 'Edmar'
-  image: 'library2.jpg'
+  image: 'read.jpg'
   greetings: 'Hi there!'
   description: "My name is Edmar Ferreira. I'm a founder, developer and bookworm. I have been making things since I teached myself how to code at 13. I mostly write here 
   about Startups, AI and Books."
